homelab/apps/n8n/base/n8n-deployment-sqlite.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-deployment
  labels: &labels
    app: n8n
    component: deployment
spec:
  replicas: 1
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n
          imagePullPolicy: IfNotPresent
          command: ["tail"]
          args: ["-f", "/dev/null"]
          ports:
            - name: http-metrics
              containerPort: 5678
          resources:
            limits:
              cpu: "1.0"
              memory: "1024Mi"
            requests:
              cpu: "0.5"
              memory: 512Mi

          volumeMounts:
            - name: data
              mountPath: /home/node/.n8n

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "nfs-synology"
        resources:
          requests:
            storage: 1Gi
