homelab/apps/n8n/base/postgresql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n-postgres
  labels: &labels
    app: n8n
    component: database
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  clusterIP: None
  selector:
    app: n8n
    component: database
---
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: n8n-postgres
  labels: &labels
    app: n8n
    component: database
spec:
  serviceName: "n8n-postgres"
  replicas: 1
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: postgresql
          image: postgres:10
          ports:
            - name: postgres
              containerPort: 5432
        volumeMounts:
          - name: data
            mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "nfs-synology"
        resources:
          requests:
            storage: 1Gi
